--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="intro.css">
    
-    <link rel="icon" href="C:\Users\Oussama\Downloads\Port Intro\favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <title>Oussama</title>
 
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
